# SummEval

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  docker-compose.yml  open_ai_summarization.py
backend/: .dockerignore  .env.production  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
backend/base/: apps.py  serializers.py  urls.py
backend/base/evaluation/: celery_progress_manager.py  evaluation_handler.py
backend/base/evaluation/metrics/: bartscore.py  bertscore.py  bleu.py  factscore_metric.py  gpt_eval.py  meteor.py  rouge.py  unieval.py
backend/base/evaluation/metrics/factscore/: atomic_facts.py  clm.py  factscorer.py  fscore_utils.py  lm.py  npm.py  openai_lm.py  search_wiki.py
backend/base/evaluation/metrics/factscore/.cache/factscore/demos/: demons.json
backend/base/models/: auto_evaluation_model.py  evaluation_model.py  experiment_model.py  fulltext_model.py  invitation_model.py  project_invite_model.py  project_model.py  summary_model.py  survey_model.py
backend/base/summarization_models/: open_ai_summarization.py  together_ai_summarization.py
backend/base/views/: atomic_facts_view.py  auto_evaluation_view.py  celery_tasks_view.py  correlation_view.py  evaluation_view.py  experiment_view.py  fulltext_view.py  invitation_view.py  project_invitation_view.py  project_view.py  survey_view.py
backend/summeval/: asgi.py  celery.py  env  settings.py  urls.py  wsgi.py
backend/users/: models.py  views.py
frontend/: .dockerignore  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  README.md  index.html  (+5 more)
(+234 files in other folders)
